--- a/.gitignore
+++ b/.gitignore
@@ -168,7 +168,18 @@ ClientBin/
 *.publishsettings
 node_modules/
 node_modules
-dist
+bower_components/
+coverage/
+.sass-cache/
+.idea/
+.tmp/
+node_modules/
+bower_components/
+coverage/
+.sass-cache/
+.idea/
+.tmp/
+./dist/
 orleans.codegen.cs
  .eslintrc.js
  .gitignore
