--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,8 @@ coverage/
 orleans.codegen.cs
  .eslintrc.js
  .gitignore
+ .DS_Store
+ .eslintrc.js
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
 #bower_components/
