--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "core-js": "^3.6.5",
+    "swiper": "^6.3.5",
+    "vant": "^3.0.0-beta.7",
     "vue": "^3.0.0-beta.1",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1"
   },
@@ -22,9 +26,11 @@
     "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.1",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   },
